# university-db

./: CMakeLists.txt  README.md
files/: input.csv  inputBackup.csv
src/: Database.cpp  Database.hpp  FileUtils.cpp  FileUtils.hpp  Gender.hpp  Student.cpp  Student.hpp  StudentUtils.cpp  StudentUtils.hpp  Tests.cpp  Tests.hpp  main  main.cpp
